--- a/templates/book.html
+++ b/templates/book.html
@@ -10,7 +10,7 @@
                 <td><span class="blue bigger-105"><% startTime %></span></td>
                 <td style="background-color: whitesmoke; color: grey"><span class="bigger-110">结束时间</span></td>
                 <td><span class="blue bigger-105"><% endTime %></span></td>
-                <td style="background-color: whitesmoke; color: grey"><span class="bigger-110">总耗时</span></td>
+                <td style="background-color: whitesmoke; color: grey"><span class="bigger-110">持续时间</span></td>
                 <td><span class="blue bigger-105"><% costTime %></span></td>
             </tr>
         </table>
