--- a/templates/bookmeeting.html
+++ b/templates/bookmeeting.html
@@ -100,7 +100,7 @@
                 <div class="widget-body">
                     <div class="widget-main no-padding">
                         <div class="space-4"></div>
-                        <ul style="color: #00BE67">
+                        <ul style="color: darkgrey">
                             <li>请严格按需预定会议室</li>
                             <li>只可预定本周会议室</li>
                             <li>预定未使用超过3次将取消预定资格</li>
