--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="{% static 'assets/css/fonts.googleapis.com.css' %}"/>
     <link rel="stylesheet" href="{% static 'assets/css/ace.min.css' %}" class="ace-main-stylesheet"
           id="main-ace-style"/>
-    {#    <link rel="stylesheet" href="{% static 'assets/css/ace-part2.min.css' %}" class="ace-main-stylesheet"/>#}
+    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}" class="ace-main-stylesheet"/>
     <link rel="stylesheet" href="{% static 'assets/css/ace-skins.min.css' %}"/>
     <link rel="stylesheet" href="{% static 'assets/css/ace-rtl.min.css' %}"/>
     <link rel="stylesheet" href="{% static 'assets/css/bootstrap-multiselect.min.css' %}"/>
@@ -28,10 +28,10 @@
     <div id="navbar" class="navbar navbar-default  ace-save-state">
         <div class="navbar-container ace-save-state" id="navbar-container">
             <div class="navbar-header pull-left">
-                <a href="l" class="navbar-brand">
+                <a href="{% url 'bookmeeting' %}" class="navbar-brand">
                     <small>
-                        <i class="fa fa-leanpub"></i>
-                        龙渊会议室预定系统
+                        <i class="fa fa-calendar"></i>
+                        <span class="web-site">龙渊会议室预定系统</span>
                     </small>
                 </a>
             </div>
@@ -53,15 +53,18 @@
                     </li>
                     <li class="light-blue dropdown-modal">
                         <a data-toggle="dropdown" href="#" class="dropdown-toggle">
-                            <img class="nav-user-photo" src="{% static 'assets/images/avatars/user.jpg' %}"
-                                 alt="Jason's Photo"/>
                             <span class="user-info">
 									<small>欢迎您,</small>
 									{{ user.username }}
 								</span>
-
                             <i class="ace-icon fa fa-caret-down"></i>
                         </a>
+                        <ul class="user-menu dropdown-menu-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close"
+                            style="width: 320px; left: 626px; right: auto; top: 149px;">
+                            <li><a href="/admin"><i class="ace-icon fa fa-cog"></i>后台管理</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#"><i class="ace-icon fa fa-power-off"></i>退出登录</a></li>
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -124,6 +127,7 @@
 <script src="{% static 'assets/js/bootstrap-multiselect.min.js' %}"></script>
 <script src="{% static 'assets/js/jquery.bootstrap-duallistbox.min.js' %}"></script>
 <script src="{% static 'assets/js/select2.min.js' %}"></script>
+<script src="{% static 'assets/js/jquery.messagebox.js' %}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.0/js.cookie.js"></script>
 {#<script src="https://cdn.bootcss.com/vue/1.0.28/vue.js"></script>#}
 <script>
