--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
                         <a data-toggle="dropdown" href="#" class="dropdown-toggle">
                             <span class="user-info">
 									<small>欢迎您,</small>
-									{{ user.username }}
+									{{ user.first_name }}
 								</span>
                             <i class="ace-icon fa fa-caret-down"></i>
                         </a>
