删除不必要的静态文件 增加docker部署相关

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,10 +17,8 @@
     <link rel="stylesheet" href="{% static 'assets/css/style.css' %}" class="ace-main-stylesheet"/>
     <link rel="stylesheet" href="{% static 'assets/css/ace-skins.min.css' %}"/>
     <link rel="stylesheet" href="{% static 'assets/css/ace-rtl.min.css' %}"/>
-    {#    <link rel="stylesheet" href="{% static 'assets/css/bootstrap-multiselect.min.css' %}"/>#}
-    {#    <link rel="stylesheet" href="{% static 'assets/css/bootstrap-duallistbox.min.css' %}"/>#}
     <link rel="stylesheet" href="{% static 'assets/css/select2.min.css' %}"/>
-    <script src="{% static 'assets/js/ace-extra.min.js' %}"></script>
+{#        <script src="{% static 'assets/js/ace-extra.min.js' %}"></script>#}
 </head>
 
 <body class="no-skin">
