修改镜像源

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta charset="utf-8"/>
-    <title>会议室预定系统|龙渊</title>
+    <title>会议室预定系统|公司</title>
     <meta name="description" content="with draggable and editable events"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
     <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}"/>
@@ -29,7 +29,7 @@
                 <a href="{% url 'bookmeeting' %}" class="navbar-brand">
                     <small>
                         <i class="fa fa-calendar"></i>
-                        <span class="web-site">龙渊会议室预定系统</span>
+                        <span class="web-site">会议室预定系统</span>
                     </small>
                 </a>
             </div>
@@ -93,7 +93,7 @@
         <div class="footer">
             <div class="footer-inner">
                 <div class="footer-content">
-                    ©2018 All Rights Reserved.版权所有.成都龙渊网络科技有限公司
+                    ©2018 All Rights Reserved.版权所有.xxx网络科技有限公司
                 </div>
             </div>
         </div>
