--- a/templates/invitation.j2
+++ b/templates/invitation.j2
@@ -12,7 +12,7 @@
                     <td>
                         <b><span
                                 style='color: #FFFFFF; font-size: 20px; background-color: #83C36D; border-radius: 4px; border: 8px solid #83C36D;'>
-                            &nbsp;&nbsp;龙渊会议邀请 &nbsp;&nbsp;</span>
+                            &nbsp;&nbsp;会议邀请 &nbsp;&nbsp;</span>
                         </b>
                     </td>
                 </tr>
@@ -164,7 +164,7 @@
 </table>
 <br><br>
 <center>
-    <span style='font-size: 12px; font-weight: 300; color: #4A4A4A;'>欢迎使用龙渊会议室预定系统
+    <span style='font-size: 12px; font-weight: 300; color: #4A4A4A;'>欢迎使用会议室预定系统
         <a href="#">点击预定会议室</a></span>
 
 </center>
