--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
                     <div class="login-container">
                         <div class="center">
                             <div class="space-4"></div>
-                            <h3 class="blue" id="id-company-text">龙渊会议室预定系统</h3>
+                            <h3 class="blue" id="id-company-text">会议室预定系统</h3>
                         </div>
                         <br>
                         <div class="space-6"></div>
@@ -69,7 +69,7 @@
             <div class="footer">
                 <div class="footer-inner">
                     <div class="footer-content">
-                        ©2018 All Rights Reserved.版权所有.成都龙渊网络科技有限公司
+                        ©2018 All Rights Reserved.版权所有.xxx网络科技有限公司
                     </div>
                 </div>
             </div>
